--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,8 @@ jobs:
       before_install:
       - sudo apt-get update
       - sudo apt-get -y install build-essential mpich libmpich-dev
-      install: 
-      - pip install pybind11 numpy pandas mpi4py
+      # install: 
+      # - pip install pybind11 numpy pandas mpi4py
       script:
       - python setup.py install
       - python setup.py test
@@ -42,8 +42,8 @@ jobs:
       before_install: 
       - sudo apt-get update
       - sudo apt-get -y install build-essential mpich libmpich-dev python3.7-dev 
-      install: 
-      - pip install pybind11 numpy pandas mpi4py
+      # install: 
+      # - pip install pybind11 numpy pandas mpi4py
       script:
       - python setup.py install
       - python setup.py test
@@ -54,8 +54,8 @@ jobs:
       before_install:
       - sudo apt-get update
       - sudo apt-get -y install build-essential mpich libmpich-dev python3.8-dev 
-      install: 
-      - pip install pybind11 numpy pandas mpi4py
+      # install: 
+      # - pip install pybind11 numpy pandas mpi4py
       script:
       - python setup.py install
       - python setup.py test
@@ -67,9 +67,9 @@ jobs:
       before_install:
         - brew update
         - brew install open-mpi
-      install: 
-        - pip3 install --upgrade pip
-        - pip3 install pandas mpi4py
+      # install: 
+      #   - pip3 install --upgrade pip
+      #   - pip3 install pandas mpi4py
       script:
         - python3 setup.py install
         - python3 setup.py test
