--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ jobs:
         mpiexec -n 2 $(which pytest) -sv
 
     - language: python
-      python: 3.9
+      python: 3.9-dev
       before_install:
       - sudo apt-get update
       - sudo apt-get -y install build-essential mpich libmpich-dev
