--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,10 @@ environment:
      PYTHON_ARCH: 64
      MSVC_VERSION: "Visual Studio 19 Win64"
 
+   - PYTHON: "C:\\Python39-x64"
+     PYTHON_ARCH: 64
+     MSVC_VERSION: "Visual Studio 19 Win64"
+
 # fail fast
 matrix:
   fast_finish: true
@@ -27,10 +31,10 @@ init:
       $python = $env:PYTHON + "\python.exe"
       & $python --version
 
-install: 
+install:
   - ps: |
       Start-FileDownload 'https://github.com/microsoft/Microsoft-MPI/releases/download/v10.1.1/msmpisetup.exe'
-      .\msmpisetup.exe -unattend # TODO this doesnt seem to do anything 
+      .\msmpisetup.exe -unattend # TODO this doesnt seem to do anything
       $python = $env:PYTHON + "\python.exe"
       & $python -m pip install --upgrade pip wheel setuptools --no-warn-script-location
 
