--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,9 +17,9 @@ environment:
      PYTHON_ARCH: 64
      MSVC_VERSION: "Visual Studio 19 Win64"
 
-   - PYTHON: "C:\\Python39-x64"
-     PYTHON_ARCH: 64
-     MSVC_VERSION: "Visual Studio 19 Win64"
+  #  - PYTHON: "C:\\Python39-x64"
+  #    PYTHON_ARCH: 64
+  #    MSVC_VERSION: "Visual Studio 19 Win64"
 
 # fail fast
 matrix:
