--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ jobs:
       - sudo apt-get update
       - sudo apt-get -y install build-essential mpich libmpich-dev
       script:
+      - python -m pip install mpi4py
       - python setup.py install
       - python setup.py test
       - mpiexec -n 2 pytest -sv
@@ -41,6 +42,7 @@ jobs:
       - sudo apt-get update
       - sudo apt-get -y install build-essential mpich libmpich-dev python3.7-dev
       script:
+      - python -m pip install mpi4py
       - python setup.py install
       - python setup.py test
       - mpiexec -n 2 pytest -sv
@@ -51,6 +53,7 @@ jobs:
       - sudo apt-get update
       - sudo apt-get -y install build-essential mpich libmpich-dev python3.8-dev
       script:
+      - python -m pip install mpi4py
       - python setup.py install
       - python setup.py test
       - mpiexec -n 2 pytest -sv
@@ -61,9 +64,9 @@ jobs:
       before_install:
         - brew update
         - brew install open-mpi
-      # install:
-      #   - pip3 install --upgrade pip
-      #   - pip3 install pandas mpi4py
+      install:
+        - pip3 install --upgrade pip
+        - pip3 install mpi4py
       script:
         - python3 setup.py install
         - python3 setup.py test
