fix appveyor cfg

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,13 +13,13 @@ environment:
      PYTHON_ARCH: 64
      MSVC_VERSION: "Visual Studio 19 Win64"
 
-    - PYTHON: "C:\\Python39-x64"
-      PYTHON_ARCH: 64
-      MSVC_VERSION: "Visual Studio 19 Win64"
+   - PYTHON: "C:\\Python39-x64"
+     PYTHON_ARCH: 64
+     MSVC_VERSION: "Visual Studio 19 Win64"
 
 # fail fast
-matrix:
-  fast_finish: true
+# matrix:
+#   fast_finish: true
 
 init:
   - ps: |
