--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ image:
 
 environment:
   matrix:
-    - PYTHON: "C:\\Python39-x64"
+    - PYTHON: "C:\\Python36-x64"
       PYTHON_ARCH: 64
       MSVC_VERSION: "Visual Studio 19 Win64"
 
@@ -16,6 +16,11 @@ environment:
     - PYTHON: "C:\\Python38-x64"
       PYTHON_ARCH: 64
       MSVC_VERSION: "Visual Studio 19 Win64"
+
+    - PYTHON: "C:\\Python39-x64"
+      PYTHON_ARCH: 64
+      MSVC_VERSION: "Visual Studio 19 Win64"
+
 
 
 matrix:
