--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,5 @@
 # Build environments
 
-image:
-  - Visual Studio 2019
-  - Ubuntu
-  - macOS
-
 environment:
   matrix:
     # - PYTHON: "C:\\Python36-x64"
@@ -12,20 +7,30 @@ environment:
     #   MSVC_VERSION: "Visual Studio 19 Win64"
     #   APPVEYOR_YML_DISABLE_PS_LINUX: 1
 
-    - PYTHON: "C:\\Python37-x64"
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      PYTHON: "C:\\Python37-x64"
       PYTHON_ARCH: 64
       MSVC_VERSION: "Visual Studio 19 Win64"
-      APPVEYOR_YML_DISABLE_PS_LINUX: 1
 
-    - PYTHON: "C:\\Python38-x64"
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      PYTHON: "C:\\Python38-x64"
       PYTHON_ARCH: 64
       MSVC_VERSION: "Visual Studio 19 Win64"
-      APPVEYOR_YML_DISABLE_PS_LINUX: 1
 
-    - PYTHON: "C:\\Python39-x64"
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      PYTHON: "C:\\Python39-x64"
       PYTHON_ARCH: 64
       MSVC_VERSION: "Visual Studio 19 Win64"
-      APPVEYOR_YML_DISABLE_PS_LINUX: 1
+
+    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
+      PYTHON: "3.8"
+      APPVEYOR_YML_DISABLE_PS_LINUX: true
+
+    - APPVEYOR_BUILD_WORKER_IMAGE: macOS
+      PYTHON: "3.8"
+      APPVEYOR_YML_DISABLE_PS_LINUX: true
+
+stack: python %PYTHON%
 
 matrix:
   allow_failures:
