--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,6 +26,10 @@ environment:
       PYTHON: "3.8"
       APPVEYOR_YML_DISABLE_PS_LINUX: true
 
+    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
+      PYTHON: "3.9"
+      APPVEYOR_YML_DISABLE_PS_LINUX: true
+
     - APPVEYOR_BUILD_WORKER_IMAGE: macOS
       PYTHON: "3.8"
       APPVEYOR_YML_DISABLE_PS_LINUX: true
@@ -63,7 +67,7 @@ build_script:
 
 test_script:
   - cmd: '%PYTHON%\python.exe setup.py test'
-  - sh: python setup.py test
+  - sh: python setup.py test && mpiexec -n 2 python setup.py test
 
 notifications:
   - provider: Email
