--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,15 +7,19 @@ environment:
     #   PYTHON_ARCH: 64
     #   MSVC_VERSION: "Visual Studio 19 Win64"
 
-    # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    #   PYTHON: "C:\\Python38-x64"
-    #   PYTHON_ARCH: 64
-    #   MSVC_VERSION: "Visual Studio 19 Win64"
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      PYTHON: "C:\\Python38-x64"
+      PYTHON_ARCH: 64
+      MSVC_VERSION: "Visual Studio 19 Win64"
 
     # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
     #   PYTHON: "C:\\Python39-x64"
     #   PYTHON_ARCH: 64
     #   MSVC_VERSION: "Visual Studio 19 Win64"
+
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      PYTHON: "3.8"
+      MINICONDA: "C:\Miniconda38-x64"
 
     # - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
     #   PYTHON: "3.7"
@@ -23,12 +27,11 @@ environment:
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
       PYTHON: "3.8"
-      CONDA_ENV: true
       APPVEYOR_YML_DISABLE_PS_LINUX: true
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
-      PYTHON: "3.9"
-      APPVEYOR_YML_DISABLE_PS_LINUX: true
+    # - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
+    #   PYTHON: "3.9"
+    #   APPVEYOR_YML_DISABLE_PS_LINUX: true
 
     # - APPVEYOR_BUILD_WORKER_IMAGE: macOS
     #   PYTHON: "3.7"
@@ -64,26 +67,18 @@ install:
       & $python -m pip install --upgrade pip wheel setuptools --no-warn-script-location
   - sh: |
       if [ "$APPVEYOR_BUILD_WORKER_IMAGE" == "Ubuntu" ]; then
-      if [ "$CONDA_ENV" == "true" ]; then
-      scripts/create-conda-env.sh
-      else
       sudo apt update && sudo apt install -y mpich libmpich-dev
-      fi
       else
       brew update && brew install open-mpi
       fi
 
 build_script:
   - cmd: '%PYTHON%\python.exe setup.py install'
-  - sh: |
-      #[[ "$CONDA_ENV" == "true" ]] && source activate conda-env
-      python setup.py install
+  - sh: python setup.py install
 
 test_script:
   - cmd: '%PYTHON%\python.exe setup.py test'
-  - sh: |
-      #[[ "$CONDA_ENV" == "true" ]] && source activate conda-env
-      python setup.py test && mpiexec -n 2 python setup.py test
+  - sh: python setup.py test && mpiexec -n 2 python setup.py test
 
 notifications:
   - provider: Email
