--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,17 +53,11 @@ matrix:
   # fast_finish: true
 
 install:
-  - cmd: |
-      REM if "%MINICONDA%" == "" (
-      REM conda create -q -n conda-env
-      REM conda activate conda-env
-      REM conda install gxx_linux-64 mpich numpy pandas pybind11 pytest mpi4py
-      REM ) else (
-      REM Start-FileDownload 'https://github.com/microsoft/Microsoft-MPI/releases/download/v10.1.1/msmpisetup.exe'
-      REM #.\msmpisetup.exe -unattend # TODO this doesnt seem to do anything
-      set PYTHON="%PYTHON%\\python.exe"
-      %PYTHON% -m pip install --upgrade pip wheel setuptools --no-warn-script-location
-      )
+  - ps: |
+      Start-FileDownload 'https://github.com/microsoft/Microsoft-MPI/releases/download/v10.1.1/msmpisetup.exe'
+      .\msmpisetup.exe -unattend # TODO this doesnt seem to do anything
+      $python = $env:PYTHON + "\python.exe"
+      & $python -m pip install --upgrade pip wheel setuptools --no-warn-script-location
   - sh: |
       if [ "$APPVEYOR_BUILD_WORKER_IMAGE" == "macOS" ]; then
       brew update && brew install open-mpi
