--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,11 +53,9 @@ matrix:
   # fast_finish: true
 
 install:
-  - ps: |
-      Start-FileDownload 'https://github.com/microsoft/Microsoft-MPI/releases/download/v10.1.1/msmpisetup.exe'
-      .\msmpisetup.exe -unattend # TODO this doesnt seem to do anything
-      $python = $env:PYTHON + "\python.exe"
-      & $python -m pip install --upgrade pip wheel setuptools --no-warn-script-location
+  - cmd: |
+      curl -fSs c:\msmpisetup.exe. https://github.com/microsoft/Microsoft-MPI/releases/download/v10.1.1/msmpisetup.exe
+      c:\MSMpiSetup.exe -unattend
   - sh: |
       if [ "$APPVEYOR_BUILD_WORKER_IMAGE" == "macOS" ]; then
       brew update && brew install open-mpi
@@ -66,7 +64,7 @@ install:
       fi
 
 build_script:
-  - cmd: '%PYTHON%\python.exe setup.py install'
+  - cmd: python.exe setup.py install'
   - sh: python setup.py install
 
 test_script:
