--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,9 +53,9 @@ matrix:
   # fast_finish: true
 
 install:
-  - cmd: |
-      curl -fSs -o c:\\msmpisetup.exe https://github.com/microsoft/Microsoft-MPI/releases/download/v10.1.1/msmpisetup.exe
-      c:\\msmpisetup.exe -unattend
+  - cmd: >-
+      curl -fSs -o c:\msmpisetup.exe https://github.com/microsoft/Microsoft-MPI/releases/download/v10.1.1/msmpisetup.exe
+      c:\msmpisetup.exe -unattend
   - sh: |
       if [ "$APPVEYOR_BUILD_WORKER_IMAGE" == "macOS" ]; then
       brew update && brew install open-mpi
