--- a/appveyor.yml
+++ b/appveyor.yml
@@ -55,7 +55,7 @@ matrix:
 install:
   - cmd: |
       curl -fSs -o c:\msmpisetup.exe https://github.com/microsoft/Microsoft-MPI/releases/download/v10.1.1/msmpisetup.exe
-      c:\msmpisetup.exe -unattend
+      rem c:\msmpisetup.exe -unattend The system cannot execute the specified program.
   - sh: |
       if [ "$APPVEYOR_BUILD_WORKER_IMAGE" == "macOS" ]; then
       brew update && brew install open-mpi
