--- a/appveyor.yml
+++ b/appveyor.yml
@@ -71,7 +71,7 @@ install:
       if [ "$APPVEYOR_BUILD_WORKER_IMAGE" == "macOS" ]; then
       brew update && brew install open-mpi
       else
-      if [ "$MINICONDA" == true" ]; then
+      if [ "$MINICONDA" == "true" ]; then
       scripts/create-conda-env.sh
       else
       sudo apt update && sudo apt install -y mpich libmpich-dev
