--- a/appveyor.yml
+++ b/appveyor.yml
@@ -82,7 +82,7 @@ build_script:
   - cmd: '%PYTHON%\python.exe setup.py install'
   - sh: |
       if [ "$MINICONDA" == "true" ]; then
-      conda activate conda-env
+      activate conda-env
       fi
       python setup.py install
 
