--- a/appveyor.yml
+++ b/appveyor.yml
@@ -71,7 +71,7 @@ install:
       if [ "$APPVEYOR_BUILD_WORKER_IMAGE" == "macOS" ]; then
       brew update && brew install open-mpi
       else
-      if [ "$MINICONDA" -ne "true" ]; then
+      if [ "$MINICONDA" != "true" ]; then
       sudo apt update && sudo apt install -y mpich libmpich-dev
       fi
       fi
@@ -79,7 +79,7 @@ install:
 build_script:
   - cmd: '%PYTHON%\python.exe setup.py install'
   - sh: |
-      if [ "$MINICONDA" != "true" ]; then
+      if [ "$MINICONDA" == "true" ]; then
       scripts/create-conda-env.sh
       fi
       python setup.py install
