--- a/appveyor.yml
+++ b/appveyor.yml
@@ -87,7 +87,12 @@ build_script:
 
 test_script:
   - cmd: '%PYTHON%\python.exe setup.py test'
-  - sh: python setup.py test && mpiexec -n 2 python setup.py test
+  - sh: |
+      if [ "$MINICONDA" == "true" ]; then
+      source "${HOME}/.miniconda/etc/profile.d/conda.sh"
+      conda activate conda-env
+      fi
+      python setup.py test && mpiexec -n 2 python setup.py test
 
 notifications:
   - provider: Email
