--- a/requirements.txt
+++ b/requirements.txt
@@ -11,17 +11,18 @@ idna==2.8
 ipaddr==2.2.0
 lockfile==0.12.2
 msgpack==0.6.2
-numpy==1.18.4
+numpy==1.19.5
 packaging==20.3
-pandas==1.0.3
+pandas==1.1.5
 pep517==0.8.2
 progress==1.5
-pybind11==2.5.0
+pybind11==2.6.1
 pyparsing==2.4.6
+pytest==6.1.2
 python-dateutil==2.8.1
 pytoml==0.1.21
-pytz==2020.1
-requests==2.22.0
+pytz==2020.4
+requests==2.25.0
 retrying==1.3.3
 six==1.14.0
 urllib3==1.25.8
