--- a/appveyor.yml
+++ b/appveyor.yml
@@ -80,7 +80,7 @@ install:
       if [ "$MINICONDA" == "true" ]; then
       scripts/create-conda-env.sh
       else
-      sudo apt update && sudo apt install -y mpich libmpich-dev ggcov
+      sudo apt update && sudo apt install -y mpich libmpich-dev
       fi
       fi
 
@@ -89,6 +89,8 @@ build_script:
   - sh: |
       if [ "$CODECOV_BUILD" == "true" ]; then
       EXTRA_COMPILE_FLAGS=--coverage
+      gcc --version
+      gcov --version
       elif [ "$MINICONDA" == "true" ]; then
       source "${HOME}/.miniconda/etc/profile.d/conda.sh"
       conda activate conda-env
