--- a/appveyor.yml
+++ b/appveyor.yml
@@ -72,7 +72,7 @@ install:
       Start-FileDownload 'https://github.com/microsoft/Microsoft-MPI/releases/download/v10.1.1/msmpisetup.exe'
       .\msmpisetup.exe -unattend # TODO this doesnt seem to do anything
       $python = $env:PYTHON + "\python.exe"
-      & $python -m pip install --upgrade pip wheel setuptools --no-warn-script-location
+      & $python -m pip install --upgrade pip wheel setuptools pytest --no-warn-script-location
   - sh: |
       if [ "$APPVEYOR_BUILD_WORKER_IMAGE" == "macOS" ]; then
       brew update && brew install open-mpi
@@ -80,7 +80,7 @@ install:
       if [ "$MINICONDA" == "true" ]; then
       scripts/create-conda-env.sh
       else
-      sudo apt update && sudo apt install -y mpich libmpich-dev
+      sudo apt update && sudo apt install -y pytest mpich libmpich-dev
       fi
       fi
 
