--- a/appveyor.yml
+++ b/appveyor.yml
@@ -107,6 +107,7 @@ test_script:
       fi
       python -m pytest && mpiexec -n 2 python -m pytest
       if [ "$CODECOV_BUILD" == "true" ]; then
+      env
       bash <(curl -s https://codecov.io/bash) -Z
       fi
 
