--- a/.github/workflows/pip-package.yml
+++ b/.github/workflows/pip-package.yml
@@ -5,7 +5,8 @@ name: Python (pip) build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ '**' ]
+    tags: '**'
   pull_request:
     branches: [ master ]
 
