address review comments re: paper and contribution guidelines https://github.com/openjournals/joss-reviews/issues/3351

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,7 +58,8 @@ nav:
   - References: references.md
   - About:
     - Citing: citing.md
-    - Contributing: developer.md
+    - Contributing: contributing.md
+    - Developer: developer.md
     - Support: support.md
     - Licence: licence.md
 #  - 'test.md'
