--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,8 @@
 [metadata]
 version = attr: neworder.__version__
+
+[flake8]
+ignore = E111, E114, E121, E261
+max-line-length = 160
+per-file-ignores = __init__.py:F401
+exclude = .venv*, untested, .git, __pycache__, .eggs, build
